# cuda-old

./: README.md
cuda_programming/cpp_cuda_interactive/: CMakeLists.txt
cuda_programming/cpp_cuda_interactive/src/: main.cpp  print_index.cu  print_index.hpp
cuda_programming/device-info/: trt-cuda
cuda_programming/device-info_2/: CMakeLists.txt
cuda_programming/device-info_2/src/: main.cpp
cuda_programming/device-info_2/src/include/: utils.hpp
cuda_programming/device-info_3/: CMakeLists.txt
cuda_programming/device-info_3/src/: main.cu
cuda_programming/dim_and_index/: CMakeLists.txt
cuda_programming/dim_and_index/src/: Grid_span_cycle.cu  print_index.cu
cuda_programming/error-handler/: CMakeLists.txt
cuda_programming/error-handler/src/: main.cpp  matmul.hpp  matmul_cpu.cpp  matmul_gpu.cu  timer.hpp  utils.cpp  utils.hpp
cuda_programming/matmul-basic/: CMakeLists.txt
cuda_programming/matmul-basic/src/: main.cpp  matmul.hpp  utils.cpp  utils.hpp
cuda_programming/matmul-shared-memory/: CMakeLists.txt
cuda_programming/nsight-system-and-compute/: CMakeLists.txt
cuda_programming/nsight-system-and-compute/src/: matmul_cpu.cpp  matmul_gpu.cu  timer.hpp  utils.hpp
